--- a/css/main.css
+++ b/css/main.css
@@ -252,62 +252,65 @@ header {
 }
 
 .features {
-    display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 60px;
-  padding: 60px;
-}
+    background: #FFFFFF;
+    background: linear-gradient(180deg,rgba(255, 255, 255, 0.07) 0%, rgba(218, 70, 239, 0.05) 42%, rgba(99, 102, 241, 0.07) 83%); 
+    padding-top: 6rem;
+    
+    padding-bottom: 5rem;
 
-.phone img {
-  width: 320px; /* byt till din mobilbild */
-  border-radius: 20px;
-}
+    @media (width >=768px) {
+        padding-bottom: 0;
+    }
+    
 
-.features-content {
-  max-width: 600px;
-}
+    .features-area {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 3rem;
+        text-align: center;
 
-.features-content h2 {
-  font-size: 2rem;
-  margin-bottom: 10px;
-}
+        @media (width >=768px) {
+            grid-template-columns: 1fr 1fr;
+            gap: 6rem;
+            text-align: left;                
+        }
 
-.features-content p {
-  color: #666;
-  margin-bottom: 30px;
-}
+        
+        .features-content {
+            display: flex;
+            flex-direction: col;
+            gap: 1rem;
+            
 
-.features-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 25px 40px;
-}
+            .features-title {
+                font-size: 56px;
+                font-weight: 800;
+            }
 
-.feature-item {
-  display: flex;
-  align-items: flex-start;
-  gap: 15px;
-}
+            .features-ingress{
+                font-size: 18px;
+                font-weight: 400;
 
-.feature-item .icon {
-  background: #f3f0ff;
-  color: #8b5cf6;
-  font-size: 20px;
-  padding: 12px;
-  border-radius: 12px;
-  flex-shrink: 0;
-}
 
-.feature-item h3 {
-  margin: 0;
-  font-size: 1.1rem;
-}
+            }
 
-.feature-item p {
-  margin: 5px 0 0;
-  font-size: 0.9rem;
-  color: #555;
+            
+
+        }
+
+        .features-image {
+            display: none;
+
+            @media (width >= 768px) {
+                display: flex;
+                
+            }
+
+ 
+        }
+
+        
+    }
 }
 
 
