--- a/css/main.css
+++ b/css/main.css
@@ -219,6 +219,7 @@ header {
 
         .hero-image {
             display: none;
+            
 
             @media (width >= 768px) {
                 display: flex;
@@ -252,15 +253,10 @@ header {
 }
 
 .features {
-    background: #FFFFFF;
-    background: linear-gradient(180deg,rgba(255, 255, 255, 0.07) 0%, rgba(218, 70, 239, 0.05) 42%, rgba(99, 102, 241, 0.07) 83%); 
-    padding-top: 6rem;
-    
+    background: #FFFFFF;     
+    padding-top: 6rem;    
     padding-bottom: 5rem;
 
-    @media (width >=768px) {
-        padding-bottom: 0;
-    }
     
 
     .features-area {
@@ -268,6 +264,7 @@ header {
         grid-template-columns: 1fr;
         gap: 3rem;
         text-align: center;
+        flex-direction: column;
 
         @media (width >=768px) {
             grid-template-columns: 1fr 1fr;
@@ -290,16 +287,26 @@ header {
         .features-content {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
-
-            
+            gap: 1rem;    
             
 
             
-
-
-
         }
+
+    .features-title {
+                font-size: 56px;
+                font-weight: 800;
+            }
+
+            .hero-ingress {
+                font-size: 18px;
+                font-weight: 400;
+
+
+            }
+    
+
+    
 
         
 
@@ -327,20 +334,10 @@ header {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
 .footer {
 
     text-align: center;
+    justify-content: center;
 }
 
 
