--- a/css/main.css
+++ b/css/main.css
@@ -233,25 +233,6 @@ header {
     }
 }
 
-.brands {
-    background: #FFFFFF;
-
-    .brands-area {
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 3rem;
-        text-align: center; 
-
-        @media (width >=768px) {
-            grid-template-columns: 1fr 1fr;
-            gap: 6rem;
-            text-align: center;                
-        }
-
-
-    }
-}
-
 .features {
     background: #FFFFFF;     
     padding-top: 6rem;    
@@ -316,22 +297,41 @@ header {
     
 }
 
-.how-does-it-work {
-    text-align: center;
+.brands-logos {
+    display: flex;
+    border-radius: 10px;
+    height: auto;
+    gap: 1rem;
     
-    
-
-    .phone-images {
-
-        display: flex;
-        justify-content: center;
-    }
 }
 
 
 
 
 
+
+.how-does-it-work {
+    
+    text-align: center;
+    
+
+  
+
+    
+
+    .phone-images {
+        display: flex;
+
+    }
+
+    
+
+    
+ 
+   
+
+ 
+}
 
 
 .footer {
@@ -341,6 +341,3 @@ header {
 }
 
 
-*{
-    outline:1px solid red
-}
