--- a/css/main.css
+++ b/css/main.css
@@ -237,6 +237,7 @@ header {
     .brands-logos {
         display: flex;
         justify-content: space-between;
+        margin-top: 3rem;
     }
     
 
@@ -244,7 +245,7 @@ header {
 
 .features {
     background: #FFFFFF;     
-    padding-top: 6rem;    
+    padding-top: 3rem;    
     padding-bottom: 5rem;
 
     
@@ -268,7 +269,7 @@ header {
             @media (width >= 768px) {
                 display: flex;
 
-                justify-content: center;
+            
                 
             }            
         }
@@ -277,10 +278,8 @@ header {
         .features-content {
             display: flex;
             flex-direction: column;
-            gap: 1rem;    
-            
-
-            
+            gap: 1rem;  
+                        
         }
 
     .features-title {
@@ -292,13 +291,10 @@ header {
                 font-size: 18px;
                 font-weight: 400;
 
-            }
- 
-                 
+            }                
           
         
     }
-
     
 }
 
@@ -314,15 +310,16 @@ header {
     .how-does-it-work-area {
         display: grid;
         grid-template-columns: 1fr;
-        gap: 3rem;
+        gap: 1rem;
         text-align: center;
-
     }
 
     .phone-images {
         display: flex;
         width: 100%;
         justify-content: space-between;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
 
         @media (width >=768px) {
         padding-bottom: 0;
@@ -332,15 +329,87 @@ header {
     
 }
 
+.subscribe {
+  display: flex;
+  justify-content: center;
+  padding: 2rem 1rem;
+}
 
+.subscribe-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 3rem;
+  max-width: 1320px;
+  width: 100%;
+  background: #f3f6ff;
+  border-radius: 20px;
+  padding: 2rem;
+}
+
+.subscribe-left {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  flex: 1;
+}
+
+.subscribe-left img {
+  width: 70px;
+}
+
+.subscribe-left h1 {
+  font: 700 1.25rem/1.4 "Manrope", sans-serif;
+  color: #131022;
+}
+
+.subscribe-right {
+  display: flex;
+  flex: 1;
+}
+
+.subscribe-right input {
+  flex: 1;
+  height: 50px;
+  padding: 0 1rem;
+  border: 1px solid #d4d7e5;
+  border-radius: 5px 0 0 5px;
+}
+
+.subscribe-right button {
+  height: 50px;
+  padding: 0 2rem;
+  border: none;
+  border-radius: 0 5px 5px 0;
+  background: #6366f1;
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.subscribe-right button:hover {
+  background: #4f46e5;
+}
+
+
+@media (max-width: 768px) {
+  .subscribe-container {
+    flex-direction: column;
+    text-align: center;
+    gap: 1.5rem;
+  }
+  .subscribe-left {
+    flex-direction: column;
+  }
+}
 
 
 .footer {
-
     text-align: center;
     justify-content: center;
+    color: #9397AD;
 }
 
 * {
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
